--- a/DNN.ipynb
+++ b/DNN.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "###Loading packages\n",
     "import numpy as np\n",
@@ -12,23 +20,22 @@
     "import math\n",
     "import itertools\n",
     "import warnings\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras import optimizers\n",
-    "from keras.callbacks import Callback\n",
-    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.callbacks import Callback, ModelCheckpoint\n",
     "from sklearn.utils import class_weight\n",
     "\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score, f1_score\n",
     "\n",
     "from keras import backend as K\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "import tensorflow as tf\n",
-    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "from numpy.random import seed\n",
     "seed(1)\n",
     "from tensorflow import set_random_seed\n",
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,31 +84,32 @@
     "    model.compile(loss='binary_crossentropy',optimizer=optimizer)\n",
     "    y_pred_class = model.predict_classes(X)\n",
     "    y_pred = model.predict(X)\n",
-    "    result = measurements(y, y_pred_class)\n",
-    "    auc = roc_auc_score(y.ravel(), y_pred.ravel())\n",
-    "    return [*result, auc]  \n"
+    "    result = measurements(y, y_pred_class, y_pred)\n",
+    "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def measurements(y_test, y_pred):  \n",
+    "def measurements(y_test, y_pred, y_pred_prob):  \n",
     "    acc = metrics.accuracy_score(y_test, y_pred)\n",
     "    sensitivity = metrics.recall_score(y_test, y_pred)\n",
     "    TN, FP, FN, TP = confusion_matrix(y_test, y_pred).ravel()\n",
     "    specificity = TN/(TN+FP)\n",
     "    precision = metrics.precision_score(y_test, y_pred)\n",
+    "    npv = TN/(TN+FN)\n",
     "    mcc = metrics.matthews_corrcoef(y_test, y_pred)\n",
-    "\n",
-    "    return [sensitivity, specificity, precision, acc, mcc]"
+    "    auc = roc_auc_score(y_test, y_pred_prob)\n",
+    "    f1 = metrics.f1_score(y_test, y_pred)\n",
+    "    return [auc, sensitivity, specificity, acc, f1, mcc, precision, npv]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,32 +130,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "###monitor function for finding the best models\n",
     "def monitor_f(y_true, y_pred):\n",
     "    TP, TN, FP, FN = evaluation(y_true, y_pred)\n",
-    "    specificity = TN/(TN+FP)\n",
-    "    mcc = ((TP*TN)-(FP*FN))/(K.sqrt((TP+FP)*(TP+FN)*(TN+FP)*(TN+FN)) + K.epsilon())\n",
-    "    return specificity* (mcc + 0.05)"
+    "    part_a = 0.05*(TN/(TN+FP))\n",
+    "    part_b = ((TP*TN*TN)-(FP*FN*TN))/((K.sqrt((TP+FP)*(TP+FN)*(TN+FP)*(TN+FN)))*(TN+FP))\n",
+    "    return part_a + part_b "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_result(model_name, purpose, result):\n",
     "    print('\\033[1mOptimized {} model {} performance: \\033[0m'.format(model_name, purpose))\n",
+    "    print(\"AUC:         {0:.3f}\".format(result[0]))\n",
+    "    print(\"Sensitivity: {0:.3f}\".format(result[1]))\n",
+    "    print(\"Specificity: {0:.3f}\".format(result[2]))\n",
     "    print(\"Accuracy:    {0:.3f}\".format(result[3]))\n",
-    "    print(\"AUC:         {0:.3f}\".format(result[5]))\n",
-    "    print(\"Sensitivity: {0:.3f}\".format(result[0]))\n",
-    "    print(\"Specificity: {0:.3f}\".format(result[1]))\n",
-    "    print(\"Precision:   {0:.3f}\".format(result[2]))\n",
-    "    print(\"MCC:         {0:.3f}\".format(result[4]))"
+    "    print(\"F1:          {0:.3f}\".format(result[4]))\n",
+    "    print(\"MCC:         {0:.3f}\".format(result[5]))\n",
+    "    print(\"PPV:         {0:.3f}\".format(result[6]))\n",
+    "    print(\"NPV:         {0:.3f}\".format(result[7]))"
    ]
   },
   {
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "col_names =  ['Group', 'model','sensitivity','specificity', 'precision', 'acc', 'mcc', 'auc']"
+    "col_names =  ['Group', 'model','auc', 'sensitivity','specificity', 'acc', 'f1', 'mcc','precision', 'npv']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,23 +266,28 @@
      "output_type": "stream",
      "text": [
       "\u001b[1mOptimized DNN model training performance: \u001b[0m\n",
-      "Accuracy:    0.750\n",
-      "AUC:         0.797\n",
-      "Sensitivity: 0.842\n",
-      "Specificity: 0.614\n",
-      "Precision:   0.762\n",
-      "MCC:         0.472\n",
+      "AUC:         0.802\n",
+      "Sensitivity: 0.851\n",
+      "Specificity: 0.630\n",
+      "Accuracy:    0.761\n",
+      "F1:          0.809\n",
+      "MCC:         0.497\n",
+      "PPV:         0.771\n",
+      "NPV:         0.742\n",
       "\u001b[1mOptimized DNN model testing performance: \u001b[0m\n",
+      "AUC:         0.798\n",
+      "Sensitivity: 0.839\n",
+      "Specificity: 0.603\n",
       "Accuracy:    0.743\n",
-      "AUC:         0.800\n",
-      "Sensitivity: 0.835\n",
-      "Specificity: 0.609\n",
-      "Precision:   0.758\n",
-      "MCC:         0.458\n"
+      "F1:          0.795\n",
+      "MCC:         0.458\n",
+      "PPV:         0.756\n",
+      "NPV:         0.718\n"
      ]
     }
    ],
    "source": [
+    "model = create_model('Adam', 'elu')\n",
     "### Load the optimized model weights\n",
     "model_path = r'''C:\\Users\\Ting.Li\\Documents\\2019\\projects\\L1000\\data\\github\\best_model_DNN_paras_5_paras_optimizer_Adam_activation_elu_seed_93_weights.h5'''\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, test_size=0.2, random_state=93)\n",
