--- a/DNN.ipynb
+++ b/DNN.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "model = create_model('Adam', 'elu')\n",
     "### Load the optimized model weights\n",
-    "model_path = r'''C:\\Users\\Ting.Li\\Documents\\2019\\projects\\L1000\\data\\github\\best_model_DNN_paras_5_paras_optimizer_Adam_activation_elu_seed_93_weights.h5'''\n",
+    "model_path = r'''C:\\Users\\Ting.Li\\Documents\\2019\\projects\\L1000\\data\\github\\optimized_model.h5'''\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, test_size=0.2, random_state=93)\n",
     "### Optimized DNN model training performance\n",
     "print_result('DNN', 'training', predict_validation(X_test, y_test, model_path, model, 'Adam'))\n",
