--- a/read_gctx_data.ipynb
+++ b/read_gctx_data.ipynb
@@ -69,7 +69,7 @@
     "from cmapPy.pandasGEXpress.parse import parse\n",
     "\n",
     "#Find the sig_id for the interested drugs \n",
-    "sig_id = drug_sig.sig_id.unique()\n",
+    "sig_id = drugs.sig_id.unique()\n",
     "#Parse the level5 information, The .gctx file can be download from https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE92742.\n",
     "sub_level5 = parse(r'''C:\\Users\\Ting.Li\\Documents\\2019\\projects\\L1000\\data\\org_data\\GSE92742_Broad_LINCS_Level5_COMPZ.MODZ_n473647x12328.gctx''', cid = sig_id)\n",
     "\n",
